# talk-as-character

./: .gitignore  JESSE_MODEL_READY.md  pyproject.toml  requirements.txt
client/: bot.py
talk_character/: __init__.py  cli.py  constants.py
talk_character/dataset/: __init__.py  build_dataset.py  build_dataset_2.py
talk_character/llm/: __init__.py  finetune.py  trainer.py
